--- a/build.gradle
+++ b/build.gradle
@@ -24,6 +24,10 @@ ihmc {
    configurePublications()
 }
 
+testSuites {
+   bambooPlanKeys = ["LIBS-IHMCPATHPLANNING"]
+}
+
 mainDependencies {
     compile group: 'org.jgrapht', name: 'jgrapht-core', version: '0.9.0'
 	compile group: 'us.ihmc', name: 'euclid-core', version: '0.4.6'
