Setting up bamboo plan for this repo.

--- a/gradle.properties
+++ b/gradle.properties
@@ -1,6 +1,6 @@
 hyphenatedName = ihmc-path-planning
-pascalCasedName = IhmcPathPlanning
-extraSourceSets = []
+pascalCasedName = IHMCPathPlanning
+extraSourceSets = ["test"]
 publishMode = SNAPSHOT
 groupDependencyVersion = SNAPSHOT-LATEST
 depthFromWorkspaceDirectory = 1
