--- a/build.gradle
+++ b/build.gradle
@@ -17,7 +17,7 @@ apply plugin: "com.github.johnrengelman.shadow"
 ihmc {
    group = "us.ihmc"
    version = "0.1.0"
-   vcsUrl = "https://stash.ihmc.us/users/dduran/repos/visibilitygraphs"
+   vcsUrl = "https://stash.ihmc.us/projects/ROB/repos/ihmc-path-planning"
    openSource = false
    
    configureDependencyResolution()
@@ -34,5 +34,8 @@ mainDependencies {
     compile group: 'us.ihmc', name: 'euclid', version: '0.6.0'
     compile group: "us.ihmc", name: "ihmc-java-extensions", version: groupDependencyVersion
     compile group: "us.ihmc", name: "ihmc-javafx-toolkit", version: groupDependencyVersion
-			}
+}
 
+testDependencies {
+   compile group: 'junit', name: 'junit', version: '4.12'
+}
