--- a/build.gradle
+++ b/build.gradle
@@ -34,6 +34,9 @@ mainDependencies {
     compile group: 'us.ihmc', name: 'euclid', version: '0.6.0'
     compile group: "us.ihmc", name: "ihmc-java-extensions", version: groupDependencyVersion
     compile group: "us.ihmc", name: "ihmc-javafx-toolkit", version: groupDependencyVersion
+    compile group: "us.ihmc", name: "ihmc-communication", version: groupDependencyVersion
+    compile group: "us.ihmc", name: "robotenvironmentawareness"
+    compile group: "us.ihmc", name: "robotenvironmentawareness-application"
 }
 
 testDependencies {
