--- a/build.gradle
+++ b/build.gradle
@@ -35,8 +35,7 @@ mainDependencies {
     compile group: "us.ihmc", name: "ihmc-java-extensions", version: groupDependencyVersion
     compile group: "us.ihmc", name: "ihmc-javafx-toolkit", version: groupDependencyVersion
     compile group: "us.ihmc", name: "ihmc-communication", version: groupDependencyVersion
-    compile group: "us.ihmc", name: "robotenvironmentawareness"
-    compile group: "us.ihmc", name: "robotenvironmentawareness-application"
+    compile group: 'us.ihmc', name: 'RobotEnvironmentAwareness', version: '0.4.6'
 }
 
 testDependencies {
