--- a/build.gradle
+++ b/build.gradle
@@ -34,7 +34,7 @@ mainDependencies {
     compile group: "us.ihmc", name: "ihmc-java-extensions", version: groupDependencyVersion
     compile group: "us.ihmc", name: "ihmc-javafx-toolkit", version: groupDependencyVersion
     compile group: "us.ihmc", name: "ihmc-communication", version: groupDependencyVersion
-    compile group: 'us.ihmc', name: 'RobotEnvironmentAwareness', version: '0.4.6'
+    compile group: 'us.ihmc', name: 'robot-environment-awareness-application', version: groupDependencyVersion
 }
 
 testDependencies {
