--- a/build.gradle
+++ b/build.gradle
@@ -39,4 +39,6 @@ mainDependencies {
 
 testDependencies {
    compile group: 'junit', name: 'junit', version: '4.12'
+   compile group: 'us.ihmc', name: 'ihmc-commons-testing', version: '0.11.2'
+   compile group: "us.ihmc", name: "simulation-construction-set", version: groupDependencyVersion
 }
