--- a/gradle.properties
+++ b/gradle.properties
@@ -1,6 +1,6 @@
 hyphenatedName = ihmc-path-planning
 pascalCasedName = IHMCPathPlanning
-extraSourceSets = ["test"]
+extraSourceSets = ["test", "visualizers"]
 publishMode = SNAPSHOT
 groupDependencyVersion = SNAPSHOT-LATEST
 depthFromWorkspaceDirectory = 1
