--- a/build.gradle
+++ b/build.gradle
@@ -45,4 +45,5 @@ testDependencies {
    compile group: 'junit', name: 'junit', version: '4.12'
    compile group: "us.ihmc", name: "ihmc-commons-testing", version: "0.12.1"
    compile group: "us.ihmc", name: "simulation-construction-set", version: groupDependencyVersion
+   compile group: 'us.ihmc', name: 'robot-environment-awareness-application', version: groupDependencyVersion
 }
