--- a/build.gradle
+++ b/build.gradle
@@ -32,6 +32,7 @@ mainDependencies {
    compile group: "us.ihmc", name: "ihmc-commons", version: "0.12.1"
    compile group: 'us.ihmc', name: 'euclid', version: '0.6.1'
    compile group: "us.ihmc", name: "ihmc-javafx-toolkit", version: groupDependencyVersion
+   compile group: 'us.ihmc', name: 'ihmc-yovariables', version: '0.2.4'
 }
 
 visualizersDependencies {
